// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MultiSelect > matches default variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bXCLgj kvJbA-D aje-multiselect aje-multiselect--default is-medium"
  >
    <label
      class="sc-imWZod gWbIwJ aje-label is-auto"
      for="react-aria-:r2:"
      id="react-aria-:r3:"
    >
      label
    </label>
    <button
      aria-expanded="false"
      aria-haspopup="listbox"
      aria-labelledby="react-aria-:r7: react-aria-:r3:"
      class="sc-iGgVNO sc-gsFSjX jYbTSg gEspTW aje-btn sc-kAycRU cfoxwV aje-btn--dropdown is-medium"
      id="react-aria-:r2:"
      role="link"
      tabindex="0"
      type="button"
    >
      <span
        class="sc-fPXMhL jmbaNS"
        id="react-aria-:r7:"
      >
        Select an option
      </span>
      <i
        aria-hidden="true"
        class="sc-jEABJj lbATfb aje-icon material-icons is-medium"
      >
        arrow_drop_down
      </i>
    </button>
  </div>
</DocumentFragment>
`;

exports[`MultiSelect > matches floating variant 1`] = `
<DocumentFragment>
  <div
    class="sc-bXCLgj kvJbA-D aje-multiselect aje-multiselect--floating is-medium"
  >
    <div
      class="sc-dLNtp hcuREP"
    >
      <button
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-labelledby="react-aria-:rf: react-aria-:rb:"
        class="sc-iGgVNO sc-gsFSjX jYbTSg gEspTW aje-btn sc-kAycRU cfoxwV aje-btn--dropdown is-medium"
        id="react-aria-:ra:"
        role="link"
        tabindex="0"
        type="button"
      >
        <span
          class="sc-fPXMhL jmbaNS"
          id="react-aria-:rf:"
        />
        <i
          aria-hidden="true"
          class="sc-jEABJj lbATfb aje-icon material-icons is-medium"
        >
          arrow_drop_down
        </i>
      </button>
      <label
        class="sc-imWZod gWbIwJ aje-label is-auto"
        for="react-aria-:ra:"
        id="react-aria-:rb:"
      >
        label
      </label>
    </div>
  </div>
</DocumentFragment>
`;
